--- a/index.html
+++ b/index.html
@@ -70,24 +70,24 @@
             </div>
            
     </section>
-    <section class="hero-footer">
-        <div class="main-container">
-            <div class="left-div">
+    <section class="hero-footer" id="hero-footer">
+        <div class="main-container" id="main-container">
+            <div id="left-div">
                 <h2>Our Achievemnts</h2>
             </div>
-            <div class="right-div">
+            <div id="right-div">
 
-                <div class="feature">
-                   <div class="title"><h3>15+</h3></div> 
-                   <div class="description"> <p>Years of Experience</p></div>
+                <div id="feature">
+                   <div id="title"><h3>15+</h3></div> 
+                   <div id="description"> <p>Years of Experience</p></div>
                 </div>
-                 <div class="feature">
-                   <div class="title"><h3>240+</h3></div> 
-                   <div class="description"> <p>Happy Customers</p></div>
+                 <div id="feature">
+                   <div id="title"><h3>240+</h3></div> 
+                   <div id="description"> <p>Happy Customers</p></div>
                 </div>
-                 <div class="feature">
-                   <div class="title"><h3>2+ Yrs </h3></div> 
-                   <div class="description"> <p> Experience</p></div>
+                 <div id="feature">
+                   <div id="title"><h3>2+ Yrs </h3></div> 
+                   <div id="description"> <p> Experience</p></div>
                 </div>
             </div>
          </div>
